# TCLB

./: .Jenkinsfile  .codecov.yaml  .gitdeps  .gitignore  .gitmodules  .travis.yml  Cheng-model.stl  Makefile  Poiseuille_verification_SRT.csv  README.md  SimulationSummaries.tex  TCLB.cbp  clear  config.mk  configure  configure_win  editor.html  install.R  install.sh  makefile  michaldulktest  test  testsss
.devcontainer/: Dockerfile  README.md  (+1 more)
src/: ADTools.cu  ADpost.sed.Rt  ADpre.h.Rt  ADpre_b.h.Rt  ADset.sh.Rt  AllocUtils.h  ArbConnectivity.hpp  ArbLattice.cpp  ArbLattice.cpp.Rt  ArbLattice.hpp  ArbLattice.hpp.Rt  ArbLatticeAccess.hpp.Rt  ArbLatticeContainer.hpp  ArbLatticeLauncher.h  ArbLatticeLauncher.h.Rt  ArbLatticeLauncher.hpp  ArbLatticeLauncher.hpp.Rt  ArbUtils.hpp  BallTree.cpp  BallTree.h  BallTree.hpp  CMakeLists.txt  CartConnectivity.hpp  CartConnectivity.hpp.Rt  CartLattice.cpp.Rt  CartLattice.h.Rt  CartLatticeAccess.hpp.Rt  CartLatticeContainer.h.Rt  CartLatticeContainer.hpp.Rt  CartLatticeContainer.inc.cpp.Rt  CartLatticeExecutor.h.Rt  CartLatticeExecutor.hpp.Rt  CartLatticeLauncher.h.Rt  CartLatticeLauncher.hpp.Rt  Catalyst.cpp  Catalyst.cpp.Rt  Catalyst.h  Chimera.h.Rt  CommonHandler.h  Connectivity.cpp  (+156 more)
src/Handlers/: Action.cpp  Action.h  BSpline.cpp  BSpline.h  Callback.cpp  Callback.h  Design.cpp  Design.h  Fourier.cpp  Fourier.h  GenericAction.cpp  GenericAction.h  GenericContainer.cpp  GenericContainer.h  GenericOptimizer.cpp  GenericOptimizer.h  IfContainer.cpp  IfContainer.cpp.Rt  IfContainer.h.Rt  InternalTopology.cpp  InternalTopology.h  MainContainer.cpp  MainContainer.h  NullHandler.cpp  NullHandler.h  OptimalControl.cpp  OptimalControl.cpp.Rt  OptimalControl.h  OptimalControlSecond.cpp  OptimalControlSecond.cpp.Rt  OptimalControlSecond.h  RepeatControl.cpp  RepeatControl.h  acAndersen.cpp  acAndersen.h  acArbitraryLattice.cpp  acArbitraryLattice.h  acConnectivity.cpp  acConnectivity.h  acContainer.cpp  (+100 more)
src/MRT/: d3q19.R  feq.R
src/d1q3/: Dynamics.R  Dynamics.c.Rt  Dynamics.h
src/d2q9/: Dynamics.R  Dynamics.c.Rt  Dynamics.h
src/d2q9_SRT/: Dynamics.R  Dynamics.c
src/d2q9_adj/: Dynamics.R  Dynamics.c.Rt  Dynamics.h  Dynamics_adj.c.Rt
src/d2q9_adj_smooth/: Dynamics.R  Dynamics.c.Rt  Dynamics.h  Dynamics_adj.c.Rt  save
src/d2q9_adj_top/: Dynamics.R  Dynamics.c.Rt  Dynamics.h
src/d2q9_ccumulant/: Dynamics.R  Dynamics.c
src/d2q9_cor/: Dynamics.R  Dynamics.c.Rt
src/d2q9_csf/: Dynamics.R  Dynamics.c.Rt
src/d2q9_cumulant/: Dynamics.R  Dynamics.c  conf.mk
src/d2q9_diff/: Dynamics.R  Dynamics.c.Rt  Dynamics.h
src/d2q9_entropic/: Dynamics.R  Dynamics.c.Rt  Dynamics.h
src/d2q9_exp/: Dynamics.R  Dynamics.c
src/d2q9_hb/: Dynamics.R  Dynamics.c
src/d2q9_heat/: Dynamics.R  Dynamics.c.Rt  Dynamics.h
src/d2q9_heat_adj/: Dynamics.R  Dynamics.c.Rt  Dynamics.h  Dynamics_adj.c.Rt
src/d2q9_heat_diff/: Dynamics.R  Dynamics.c.Rt  Dynamics.h
src/d2q9_inc/: Dynamics.R  Dynamics.c.Rt
src/d2q9_kuper/: Dynamics.R  Dynamics.c.Rt  Dynamics.h
src/d2q9_kuper2/: Dynamics.R  Dynamics.c.Rt
src/d2q9_kuper_adj/: Dynamics.R  Dynamics.c.Rt  Dynamics.h
src/d2q9_kuper_new/: Dynamics.R  Dynamics.c.Rt
src/d2q9_lee/: Dynamics.R  Dynamics.c.Rt  lbm-lee-bgk.py
src/d2q9_les/: Dynamics.R  Dynamics.c.Rt  Dynamics.h  Dynamics_adj.c.Rt
src/d2q9_mes/: Dynamics.R  Dynamics.c.Rt  Dynamics.h
src/d2q9_new/: Dynamics.R  Dynamics.c.Rt
src/d2q9_npe_guo/: Dynamics.R  Dynamics.c.Rt
src/d2q9_npe_guo/python/: test_eof.py
src/d2q9_npe_guo/tests/: test_0.xml
src/d2q9_optimalMixing/: Dynamics.R  Dynamics.c.Rt
src/d2q9_pf/: Dynamics.R  Dynamics.c.Rt
src/d2q9_pf_curvature/: Dynamics.R  Dynamics.c.Rt  check.py
src/d2q9_pf_pressureEvolution/: Dynamics.R  Dynamics.c.Rt
src/d2q9_plate/: Dynamics.R  Dynamics.c.Rt
src/d2q9_poison_boltzmann/: Dynamics.R  Dynamics.c.Rt
src/d2q9_pp_LBL/: Dynamics.R  Dynamics.c.Rt
src/d2q9_pp_LBL_2/: Dynamics.R  Dynamics.c.Rt
src/d2q9_pp_MCMP/: Dynamics.R  Dynamics.c.Rt
src/d2q9_rho/: Dynamics.R  Dynamics.c.Rt  Dynamics.h
src/d2q9_solid/: Dynamics.R  Dynamics.c.Rt
src/d2q9_thin_film/: Dynamics.R  Dynamics.c.Rt
src/d2q9_transport/: Dynamics.R  Dynamics.c.Rt  Dynamics.h
src/d2q9_transport_adj/: Dynamics.R  Dynamics.c.Rt  Dynamics.h
src/d2q9_two/: Dynamics.R  Dynamics.c.Rt  Dynamics.h
src/d3q19/: Dynamics.R  Dynamics.c.Rt  Dynamics.h.Rt  Dynamics_adj.c.Rt
src/d3q19_adj/: Dynamics.R  Dynamics.c.Rt  Dynamics.h  Dynamics_adj.c.Rt
src/d3q19_heat/: Dynamics.R  Dynamics.c.Rt  Dynamics.h.Rt
src/d3q19_heat_adj/: Dynamics.R  Dynamics.c.Rt  Dynamics.h.Rt  Dynamics_adj.c.Rt
src/d3q19_heat_adj_art/: Dynamics.R  Dynamics.c
src/d3q19_heat_adj_prop/: Dynamics.R  Dynamics.c.Rt
src/d3q19_kuper/: Dynamics.R  Dynamics.c.Rt
src/d3q19_les/: Dynamics.R  Dynamics.c.Rt  Dynamics_adj.c.Rt
src/d3q27/: Dynamics.R  Dynamics.c.Rt  conf.mk
src/d3q27_BGK/: Dynamics.R  Dynamics.c
src/d3q27_BGK_galcor/: Dynamics.c
src/d3q27_BGK_gallcor/: Dynamics.R  Dynamics.c
src/d3q27_cumulant/: Dynamics.R  Dynamics.c  Dynamics.c.Rt  Dynamics_adj.c.Rt
src/d3q27_cumulant2/: Dynamics.R  Dynamics.c.Rt
src/d3q27_cumulant_heat/: Dynamics.R  Dynamics.c.Rt
src/d3q27_cumulant_qibb_small/: Dynamics.c.Rt
src/d3q27_viscoplastic/: Dynamics.R  Dynamics.c
src/docs-by-doxygen/: README.md  conf.doxygen
src/lib/: FMT.R  boundary.R  cumulant.R  d3q19.R  feq.R  lattice.R  quaternion.R  utils.R
src/sw/: Dynamics.R  Dynamics.c.Rt  Dynamics.h
src/templates/: ArbitraryLattice.cu.Rt  ArbitraryLattice.h.Rt  ArbitraryLatticeAccess.inc.cpp.Rt  ArbitraryLatticeContainer.h.Rt  ArbitraryLatticeContainer.inc.cpp.Rt  ContainerAccessors.cpp  ContainerAccessors.cpp.Rt  Dynamics.h.Rt  Lattice.cu.Rt  Lattice.h.Rt  LatticeAccess.inc.cpp.Rt  LatticeContainer.h.Rt  LatticeContainer.inc.cpp.Rt  LatticeContainerBase.cpp.Rt  LatticeContainerBase.h.Rt  Lists.cpp.Rt  ModelConsts.h.Rt  SUMMARY.Rt  arbcuda.cu.Rt  cuda.cu.Rt
src/wave/: Dynamics.R  Dynamics.c  Dynamics.c.Rt
src/wave/tmp/: Dynamics.c
src/wave2d/: Dynamics.c.Rt  Dynamics.h  conf.mk
tools/: RT  (+34 more)
(+488 files in other folders)
